--- a/template/taskPage.html
+++ b/template/taskPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="taskPage.css" type="text/css" rel="stylesheet"/>
+    <link href="/static/taskPage.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 	<h1>Remind_Me</h1>
@@ -13,11 +13,11 @@
 		<div class="ntBullet"></div>
 		
 		<div id="ntInput" class="ntSubMenu">
-			<p>◙ time?</p>
-			<input id="ntTime" placeholder="hh:mm">
-			<br>
-			<p>◙ frequency?</p>
-			<form class="ntForm">
+			<form class="ntForm" method="POST">
+			  <p>◙ time?</p>
+			  <input id="ntTime" name="time" placeholder="hh:mm">
+			  <br>
+			  <p>◙ frequency?</p>
 			  <input type="radio" id="once" name="freq" value="once">
 			  <label for="once">one-time</label>
 			  <input class="togFreq" id="onceFreq" placeholder="mm/dd/yyyy">
@@ -41,12 +41,12 @@
 			  <input type="radio" id="monthly" name="freq" value="monthly">
 			  <label for="monthly">monthly</label>
 			  <input class="togFreq" id="monthlyFreq" placeholder="1-31">
+			  <p>◙ message?</p>
+			  <input type="text" id="ntMessage" name="msgTxt" class="ntMessageText">
+			  <br>
+			  <input type="submit" value="Submit">
+			  <button type="reset" value="Reset">Reset</button>
 			</form>
-			<p>◙ message?</p>
-			<input type="text" id="ntMessage" class="ntMessageText">
-			<br>
-			<button type="submit" value="Submit">Submit</button>
-			<button type="reset" value="Reset">Reset</button>			
 		</div>
 		
     </div>
